Fix formatting and whitespace in header and Crew styles
Cleaned up indentation and whitespace in header.jsx, navBar.css, and Crew.css for improved readability and consistency. No functional changes were made.

--- a/src/mainContent/crew/Crew.css
+++ b/src/mainContent/crew/Crew.css
@@ -135,7 +135,7 @@
         align-items: center;
         justify-content: flex-end;
     }
-    
+
     .Crew--content {
         width: 90%;
         height: 40%;
@@ -163,13 +163,13 @@
         align-items: flex-start;
         width: 100%;
     }
-    
+
     .Crew--titlePosition h3 {
         text-align: center;
         font-size: 4vw;
     }
-    
-    .Crew--titleName h1  {
+
+    .Crew--titleName h1 {
         text-align: center;
         font-size: 7vw;
     }
@@ -180,7 +180,7 @@
         align-items: center;
         height: 8vh;
     }
-    
+
     .Crew--text p {
         text-align: center;
         font-size: 2.2vw;
@@ -209,15 +209,14 @@
     }
 }
 
-@media screen and (max-width: 750px)
-{
+@media screen and (max-width: 750px) {
     .Crew--container {
         flex-direction: column-reverse;
     }
 
     .Crew--content {
         flex-direction: column-reverse;
-        justify-content:center;
+        justify-content: center;
         align-items: center;
         width: 90%;
         height: 40%;
@@ -228,7 +227,7 @@
         width: 100%;
         position: relative;
     }
-    
+
     .Crew--titlePage h3 {
         text-align: center;
         font-size: 4vw;
@@ -244,7 +243,7 @@
     .Crew--img img {
         width: 90%;
         height: 65%;
-        object-fit: contain; 
+        object-fit: contain;
         border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     }
 
@@ -257,7 +256,7 @@
         width: 100vw;
     }
 
-    .Crew--titleName h1  {
+    .Crew--titleName h1 {
         text-align: center;
         font-size: 8vw;
     }
